parse.output
Grammar

    0 $accept: grammar $end

    1 grammar: rule
    2        | grammar rule

    3 rule: NON_TERMINAL ':' production_list ';'

    4 production_list: production
    5                | production_list '|' production

    6 production: prod_elem
    7           | production prod_elem

    8 prod_elem: TERMINAL
    9          | NON_TERMINAL
   10          | zero_or_more
   11          | one_or_more
   12          | one_or_zero
   13          | group

   14 zero_or_more: group '*'

   15 one_or_more: group '+'

   16 one_or_zero: group '?'

   17 group: '(' production ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17
    ')' (41) 17
    '*' (42) 14
    '+' (43) 15
    ':' (58) 3
    ';' (59) 3
    '?' (63) 16
    '|' (124) 5
    error (256)
    TERMINAL <str> (258) 8
    NON_TERMINAL <str> (259) 3 9


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    grammar <node> (14)
        on left: 1 2
        on right: 0 2
    rule <node> (15)
        on left: 3
        on right: 1 2
    production_list <node> (16)
        on left: 4 5
        on right: 3 5
    production <node> (17)
        on left: 6 7
        on right: 4 5 7 17
    prod_elem <node> (18)
        on left: 8 9 10 11 12 13
        on right: 6 7
    zero_or_more <node> (19)
        on left: 14
        on right: 10
    one_or_more <node> (20)
        on left: 15
        on right: 11
    one_or_zero <node> (21)
        on left: 16
        on right: 12
    group <node> (22)
        on left: 17
        on right: 13 14 15 16


State 0

    0 $accept: • grammar $end
    1 grammar: • rule
    2        | • grammar rule
    3 rule: • NON_TERMINAL ':' production_list ';'

    NON_TERMINAL  shift, and go to state 1

    grammar  go to state 2
    rule     go to state 3


State 1

    3 rule: NON_TERMINAL • ':' production_list ';'

    ':'  shift, and go to state 4


State 2

    0 $accept: grammar • $end
    2 grammar: grammar • rule
    3 rule: • NON_TERMINAL ':' production_list ';'

    $end          shift, and go to state 5
    NON_TERMINAL  shift, and go to state 1

    rule  go to state 6


State 3

    1 grammar: rule •

    $default  reduce using rule 1 (grammar)


State 4

    3 rule: NON_TERMINAL ':' • production_list ';'
    4 production_list: • production
    5                | • production_list '|' production
    6 production: • prod_elem
    7           | • production prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9

    production_list  go to state 10
    production       go to state 11
    prod_elem        go to state 12
    zero_or_more     go to state 13
    one_or_more      go to state 14
    one_or_zero      go to state 15
    group            go to state 16


State 5

    0 $accept: grammar $end •

    $default  accept


State 6

    2 grammar: grammar rule •

    $default  reduce using rule 2 (grammar)


State 7

    8 prod_elem: TERMINAL •

    $default  reduce using rule 8 (prod_elem)


State 8

    9 prod_elem: NON_TERMINAL •

    $default  reduce using rule 9 (prod_elem)


State 9

    6 production: • prod_elem
    7           | • production prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'
   17      | '(' • production ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9

    production    go to state 17
    prod_elem     go to state 12
    zero_or_more  go to state 13
    one_or_more   go to state 14
    one_or_zero   go to state 15
    group         go to state 16


State 10

    3 rule: NON_TERMINAL ':' production_list • ';'
    5 production_list: production_list • '|' production

    ';'  shift, and go to state 18
    '|'  shift, and go to state 19


State 11

    4 production_list: production •  [';', '|']
    7 production: production • prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9

    $default  reduce using rule 4 (production_list)

    prod_elem     go to state 20
    zero_or_more  go to state 13
    one_or_more   go to state 14
    one_or_zero   go to state 15
    group         go to state 16


State 12

    6 production: prod_elem •

    $default  reduce using rule 6 (production)


State 13

   10 prod_elem: zero_or_more •

    $default  reduce using rule 10 (prod_elem)


State 14

   11 prod_elem: one_or_more •

    $default  reduce using rule 11 (prod_elem)


State 15

   12 prod_elem: one_or_zero •

    $default  reduce using rule 12 (prod_elem)


State 16

   13 prod_elem: group •  [TERMINAL, NON_TERMINAL, ';', '|', '(', ')']
   14 zero_or_more: group • '*'
   15 one_or_more: group • '+'
   16 one_or_zero: group • '?'

    '*'  shift, and go to state 21
    '+'  shift, and go to state 22
    '?'  shift, and go to state 23

    $default  reduce using rule 13 (prod_elem)


State 17

    7 production: production • prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'
   17      | '(' production • ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9
    ')'           shift, and go to state 24

    prod_elem     go to state 20
    zero_or_more  go to state 13
    one_or_more   go to state 14
    one_or_zero   go to state 15
    group         go to state 16


State 18

    3 rule: NON_TERMINAL ':' production_list ';' •

    $default  reduce using rule 3 (rule)


State 19

    5 production_list: production_list '|' • production
    6 production: • prod_elem
    7           | • production prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9

    production    go to state 25
    prod_elem     go to state 12
    zero_or_more  go to state 13
    one_or_more   go to state 14
    one_or_zero   go to state 15
    group         go to state 16


State 20

    7 production: production prod_elem •

    $default  reduce using rule 7 (production)


State 21

   14 zero_or_more: group '*' •

    $default  reduce using rule 14 (zero_or_more)


State 22

   15 one_or_more: group '+' •

    $default  reduce using rule 15 (one_or_more)


State 23

   16 one_or_zero: group '?' •

    $default  reduce using rule 16 (one_or_zero)


State 24

   17 group: '(' production ')' •

    $default  reduce using rule 17 (group)


State 25

    5 production_list: production_list '|' production •  [';', '|']
    7 production: production • prod_elem
    8 prod_elem: • TERMINAL
    9          | • NON_TERMINAL
   10          | • zero_or_more
   11          | • one_or_more
   12          | • one_or_zero
   13          | • group
   14 zero_or_more: • group '*'
   15 one_or_more: • group '+'
   16 one_or_zero: • group '?'
   17 group: • '(' production ')'

    TERMINAL      shift, and go to state 7
    NON_TERMINAL  shift, and go to state 8
    '('           shift, and go to state 9

    $default  reduce using rule 5 (production_list)

    prod_elem     go to state 20
    zero_or_more  go to state 13
    one_or_more   go to state 14
    one_or_zero   go to state 15
    group         go to state 16
